add component library with JS interop

--- a/src/blazor/final/BlazorSample.App/BlazorSample.App.csproj
+++ b/src/blazor/final/BlazorSample.App/BlazorSample.App.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BlazorSample.Components\BlazorSample.Components.csproj" />
     <ProjectReference Include="..\BlazorSample.Shared\BlazorSample.Shared.csproj" />
   </ItemGroup>
 
