--- a/blazor/start/BlazorSample.Api/Properties/launchSettings.json
+++ b/blazor/start/BlazorSample.Api/Properties/launchSettings.json
@@ -9,16 +9,16 @@
     }
   },
   "profiles": {
-    //"BlazorSample.Api": {
-    //  "commandName": "Project",
-    //  "dotnetRunMessages": true,
-    //  "launchBrowser": true,
-    //  "launchUrl": "weatherforecast",
-    //  "applicationUrl": "https://localhost:7081;http://localhost:5081",
-    //  "environmentVariables": {
-    //    "ASPNETCORE_ENVIRONMENT": "Development"
-    //  }
-    //},
+    "BlazorSample.Api": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": false,
+      "launchUrl": "weatherforecast",
+      "applicationUrl": "https://localhost:7081;http://localhost:5081",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": false,
